Embedded Calendar not Responsive on Mobile Fixes #16

--- a/docs/style.css
+++ b/docs/style.css
@@ -92,3 +92,22 @@ body{
     }
 
   }
+
+.responsiveCal {
+    position: relative; 
+    padding-bottom: 50%; 
+    height: 100%;
+    overflow: hidden;
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+}
+     
+.responsiveCal iframe {
+    position: absolute; 
+    top:0; 
+    left: 0; 
+    width: 100%; 
+    height: 100%; 
+    max-height: 600px;
+}
